--- a/login.html
+++ b/login.html
@@ -47,6 +47,17 @@ html, body{
         margin: 0 auto 20px auto;
         max-width: 180px;
     }
+    p{
+        margin: 15px;
+    }
+    a{
+        color: black;
+        text-decoration: none;
+        font-weight: bold;
+    }
+    a:hover{
+        text-decoration: underline;
+    }
     </style>
 </head>
 <body>
@@ -62,6 +73,9 @@ html, body{
         <Label>Senha</Label>
         <input type="password" name="senha">
         <button>Entrar</button>
+        <p>Não têm conta?
+            <a href="cadastro.php">Clique Aqui</a>
+        </p>
     </form>
     </div>
 </body>
