--- a/menu.html
+++ b/menu.html
@@ -78,7 +78,7 @@ a:hover{
         <ul>
             <li><a href="login.html">LOGIN</a></li>
             <li><a href="planos.html">PLANOS</a></li>
-            <li><a href="$">AGENDAMENTOS</a></li>
+            <li><a href="../agendamento.html">AGENDAMENTOS</a></li>
             <li><a href="$">SAIR</a></li>
         </ul>
     </nav>
