--- a/planos.html
+++ b/planos.html
@@ -8,11 +8,12 @@
         body{
             margin: 0;
             font-family: Arial;
-            background: linear-gradient(#000,#0f5);
+            background: linear-gradient(145deg,rgb(0, 0, 0),rgb(24, 109, 53),rgb(0, 0, 0));
             color:white;
             text-align: center;
         }
         h1{
+            color: #0f5;
             margin: 30px 0;
         }
         .planos{
@@ -61,7 +62,7 @@
     </style>
 </head>
 <body>
-    <H1>Nossos Planos</H1>
+    <h1>Nossos Planos</h1>
     <div class="planos">
         <div class="card">
 <h2>Básico</h2>
